{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 57,
  "lineage": "68cbfc0e-2af2-e272-baea-fa93ca3a5029",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-02T13:26:02.023-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/simplehealth360/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "simplehealth360",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-06-02T13:26:02.263-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/simplehealth360/global/firewalls/deny-all",
            "log_config": [],
            "name": "deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "simplehealth360",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/firewalls/deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/simplehealth360/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7367159549120310177",
            "project": "simplehealth360",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-02T13:26:01.988-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/simplehealth360/regions/us-south1/routers/my-vpc-network-router",
            "name": "my-vpc-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/networks/my-vpc-network",
            "project": "simplehealth360",
            "region": "us-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplehealth360/regions/us-south1/routers/my-vpc-network-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-02T13:26:02.293-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/simplehealth360/regions/us-south1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/simplehealth360/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "simplehealth360",
            "purpose": "PRIVATE",
            "region": "us-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplehealth360/regions/us-south1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}